fix the visibility bug

--- a/style.css
+++ b/style.css
@@ -7,16 +7,19 @@
 .calculator{
 
     margin-top: 60px;
-    width: 515px;
+    width: 533px;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
 
 }
-/* .moneyForm{
-    width: 533px;
-} */
+.moneyForm{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .row{
     width: 533px;
 }
